[project]
name = "mcp-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "openai>=2.8.0",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlglot>=27.29.0",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
