[project]
name = "mcp-sql"
version = "0.1.0"
description = """Built my first MCP‑powered server application (QueryGenie) that converts natural language into executable PostgreSQL queries. Now anyone can simply say “show me active staff members” and get the right SQL — making databases more accessible.
hashtag#MCP hashtag#PostgreSQL hashtag#NL2SQL"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "openai>=2.8.0",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "sqlglot>=27.29.0",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
